frontend/test/should_pass/basic_005.grg
rule r {
	pattern {
		negative {
		}
	}
	modify {
	}
}

