frontend/test/should_fail/dpo_001.grg
dpo dpo rule r {
	pattern {
	}
	replace {
	}
}

